@@ -1,6 +1,5 @@
 // $Id$
 
-#include "xercesc/framework/MemBufFormatTarget.hpp"
 #include <string.h>
 
 namespace XSCRT
@@ -15,7 +14,8 @@ Buffer_Writer_T <T, CHAR_TYPE>::
 Buffer_Writer_T (const CHAR_TYPE * ns,
                const CHAR_TYPE * root,
                typename writer_function <T>::result_type writer)
-: Writer_T <T, CHAR_TYPE> (ns, root, writer)
+: Writer_T <T, CHAR_TYPE> (ns, root, writer),
+  target_ (new xercesc::MemBufFormatTarget ())
 {
 
 }
@@ -33,29 +33,42 @@ Buffer_Writer_T <T, CHAR_TYPE>::~Buffer_Writer_T (void)
 // open
 //
 template <typename T, typename CHAR_TYPE>
-bool Buffer_Writer_T <T, CHAR_TYPE>::write (const char * buffer, size_t size)
+bool Buffer_Writer_T <T, CHAR_TYPE>::write (char * buffer, size_t & size)
 {
-  std::auto_ptr <xercesc::MemBufFormatTarget>
-    format_target (new xercesc::MemBufFormatTarget ());
+  // Get the size of the XML document.
+  size_t copy_n = this->get_buffer_size ();
 
-  bool retval = false;
+  if (copy_n > size)
+    return false;
 
-  // Write the element to the target.
+  // Copy the buffer, and set the size.
+  ::memcpy (buffer, this->target_->getRawBuffer (), copy_n);
+  size = copy_n;
+
+  return true;
+}
+
+//
+// operator <<=
+//
+template <typename T, typename CHAR_TYPE>
+void Buffer_Writer_T <T, CHAR_TYPE>::operator <<= (const T & entity)
+{
+  // First, let the base class construct the DOM object.
+  Writer_T <T, CHAR_TYPE>::operator <<= (entity);
+
+  // Now, save the XML document into an internal buffer.
   if (this->dom_writer_)
-    retval = this->dom_writer_->writeNode (format_target.get (), *this->document_);
+    this->dom_writer_->writeNode (this->target_.get (), *this->document_);
+}
 
-  if (retval)
-  {
-    // Get the size of the XML document.
-    size_t copy_n = format_target->getLen ();
-
-    if (size < copy_n)
-      copy_n = size;
-
-    ::memcpy (buffer, format_target->getRawBuffer (), copy_n);
-  }
-
-  return retval;
+//
+// get_buffer_size
+//
+template <typename T, typename CHAR_TYPE>
+size_t Buffer_Writer_T <T, CHAR_TYPE>::get_buffer_size (void) const
+{
+  return this->target_->getLen ();
 }
 
 }
