@@ -1,3 +1,12 @@
+Tue Sep  9 22:21:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * XSCRT/XSCRT/utils/Buffer_Writer_T.h:
+        * XSCRT/XSCRT/utils/Buffer_Writer_T.cpp:
+
+          . Re-implemented the buffer writer so that it uses an internal
+            buffer when writing the XML document. Also, implemented
+            accessor methods for querying about the internal buffer.
+
 Thu Sep  4 20:32:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * XSCRT/XSCRT/XSCRT.mpc:
